# rss-reader

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Makefile  README.md  code-review-report.md  package-lock.json  package.json  revise.md
.github/: ci.env
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  deploy-infra.yml  notify.yml
.kiro/: agent.json
.kiro/specs/rss-reader/: design.md  requirements.md  tasks.md
.serena/: project.yml
backend/: .dockerignore  .flake8  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  middleware.py  security.py
backend/app/api/: __init__.py  articles.py  feeds.py  jobs.py  keywords.py
backend/app/models/: __init__.py  article.py  base.py  feed.py  importance_reason.py  keyword.py  link_index.py
backend/app/schemas/: __init__.py  article.py  feed.py  job.py  keyword.py
backend/app/services/: __init__.py  article_service.py  cleanup_service.py  feed_fetcher_service.py  feed_service.py  importance_score_service.py  keyword_service.py
backend/app/utils/: __init__.py  datetime_utils.py  dynamodb_client.py
backend/tests/: __init__.py
backend/tests/integration/: test_deployment_health.py
backend/tests/property/: __init__.py  test_article_service.py  test_auth.py  test_cicd_pipeline.py  test_cleanup_service.py  test_data_models.py  test_feed_fetcher_service.py  test_importance_score.py  test_keyword_service.py
backend/tests/support/: __init__.py  cleanup_fakes.py
backend/tests/unit/: __init__.py  test_api_endpoints.py  test_article_service.py  test_auth.py  test_cleanup_service.py  test_data_models.py  test_datetime_utils.py  test_dynamodb_client.py  test_feed_fetcher_service.py  test_feed_service.py  test_importance_score_service.py  test_keyword_service.py
docs/: chakra_ui.md  github-secrets-setup.md  notification-setup.md  python_coding_conventions.md  react_coding_conventions.md  ts_coding_conventions.md
frontend/: .env.example  .eslintrc.cjs  ESLINT_FIXES.md  ESLINT_FIXES_REMAINING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  type-errors-fix-plan.md  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  theme.ts
frontend/src/api/: articles.ts  client.ts  feeds.ts  index.ts  jobs.ts  keywords.ts  types.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/: ErrorBoundary.tsx  Layout.test.tsx  Layout.tsx
frontend/src/components/__tests__/: ErrorBoundary.test.tsx  Layout.test.tsx
frontend/src/components/articles/: ArticleActionButtons.tsx  ArticleDetail.tsx  ArticleFilterControls.tsx  ArticleList.tsx  ArticleSortControls.tsx  ArticleStatusBadge.tsx  index.ts
frontend/src/components/articles/__tests__/: ArticleActionButtons.test.tsx  ArticleDetail.test.tsx  ArticleFilterControls.test.tsx  ArticleList.test.tsx  ArticleSortControls.test.tsx  ArticleStatusBadge.test.tsx
frontend/src/components/feeds/: FeedEditForm.tsx  FeedForm.tsx  FeedList.tsx  index.ts
frontend/src/components/feeds/__tests__/: FeedForm.test.tsx  FeedList.test.tsx
frontend/src/components/keywords/: KeywordEditForm.tsx  KeywordForm.tsx  KeywordList.tsx  index.ts
frontend/src/components/keywords/__tests__/: KeywordForm.test.tsx  KeywordList.test.tsx
frontend/src/compositions/ui/: tooltip.tsx
frontend/src/features/articles/: ArticleManagementPage.tsx  api.ts
frontend/src/features/feeds/: FeedManagementPage.tsx  api.ts
frontend/src/hooks/: index.ts  useArticles.ts  useFeeds.ts  useJobs.ts  useKeywords.ts
frontend/src/hooks/__tests__/: useArticles.test.tsx  useFeeds.test.ts  useFeeds.test.tsx  useJobs.test.tsx  useKeywords.test.tsx
frontend/src/pages/: DemoPage.tsx
frontend/src/pages/__tests__/: DemoPage.test.tsx
frontend/src/test/: setup.ts  test-utils.tsx
frontend/src/theme/: index.ts
infrastructure/: .eslintrc.cjs  README.md  cdk.json  package-lock.json  package.json
infrastructure/lib/: rss-reader-stack.d.ts  rss-reader-stack.js  rss-reader-stack.ts
infrastructure/scripts/: deploy.sh  destroy.sh
